[gd_scene load_steps=12 format=2]

[ext_resource path="res://2d/source/scenes/difficulty_level.tscn" type="PackedScene" id=1]
[ext_resource path="res://2d/source/scenes/scene_header.tscn" type="PackedScene" id=2]
[ext_resource path="res://2d/source/scenes/main_menu_buttons.tscn" type="PackedScene" id=3]
[ext_resource path="res://2d/source/scenes/player_stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://2d/assets/themes/transparent_borders.tres" type="Theme" id=5]
[ext_resource path="res://2d/assets/themes/theme.tres" type="Theme" id=6]
[ext_resource path="res://2d/source/scripts/stats_scene/stats_panel_saved.gd" type="Script" id=7]
[ext_resource path="res://2d/source/scripts/main_menu/main_menu.gd" type="Script" id=8]
[ext_resource path="res://2d/assets/images/title_background.jpg" type="Texture" id=9]
[ext_resource path="res://bundles/assets/fonts/xolonium/Xolonium.tres" type="DynamicFont" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.027451, 0.458824, 0.384314, 0.768627 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[node name="MainMenu" type="Node2D" groups=["main_menu"]]
visible = false
script = ExtResource( 8 )
__meta__ = {
"_edit_horizontal_guides_": [ 274.0 ]
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 9 )

[node name="SceneUnfocusedPanel" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.823529 )
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )

[node name="GameDataLoaded" parent="." instance=ExtResource( 4 )]
position = Vector2( -587, 266 )

[node name="Background" parent="GameDataLoaded" index="0"]
margin_left = 602.0
margin_top = 58.0
margin_right = 956.0
margin_bottom = 283.0
rect_min_size = Vector2( 0, 268 )

[node name="ButtonExit" parent="GameDataLoaded" index="1"]
visible = false

[node name="Stats" type="Node2D" parent="GameDataLoaded"]

[node name="Panel" type="Panel" parent="GameDataLoaded/Stats"]
margin_left = 602.0
margin_top = 20.0
margin_right = 956.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 611, -10 )
custom_styles/panel = SubResource( 1 )

[node name="Text" type="Label" parent="GameDataLoaded/Stats"]
margin_left = 608.0
margin_top = 29.0
margin_right = 705.0
margin_bottom = 56.0
theme = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 5

[node name="GameDataSaved" parent="." groups=["stats_saved"] instance=ExtResource( 4 )]
position = Vector2( 18, -61 )
script = ExtResource( 7 )

[node name="Background" parent="GameDataSaved" index="0"]
margin_left = 634.0
margin_top = 385.0
margin_right = 988.0
margin_bottom = 610.0
rect_min_size = Vector2( 0, 268 )

[node name="ButtonExit" parent="GameDataSaved" index="1"]
visible = false

[node name="Stats" type="Node2D" parent="GameDataSaved"]
position = Vector2( 0, 1 )

[node name="Panel" type="Panel" parent="GameDataSaved/Stats"]
margin_left = 635.0
margin_top = 346.0
margin_right = 988.0
margin_bottom = 386.0
rect_pivot_offset = Vector2( 611, -10 )
custom_styles/panel = SubResource( 1 )

[node name="Text" type="Label" parent="GameDataSaved/Stats"]
margin_left = 642.0
margin_top = 355.0
margin_right = 739.0
margin_bottom = 382.0
theme = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 5

[node name="GameData" parent="." instance=ExtResource( 3 )]
position = Vector2( 283, 28 )

[node name="UsernameLineEdit" parent="GameData/GameDataPanel/GridContainer/GridContainer" index="1"]
focus_neighbour_top = NodePath("../../../../../Builder")
focus_previous = NodePath("../../../../../Builder")

[node name="Line3" parent="GameData/GameDataPanel/GridContainer/ButtonLoad" index="0"]
position = Vector2( 95, 26.25 )

[node name="Line4" parent="GameData/GameDataPanel/GridContainer/ButtonDelete" index="0"]
position = Vector2( 89, 26.25 )

[node name="SceneUnfocusedPanel" parent="GameData" index="1"]
modulate = Color( 1, 1, 1, 0.666667 )
margin_left = -290.0
margin_top = -15.0
margin_right = 734.0
margin_bottom = 585.0

[node name="DeleteGameDialog" parent="GameData" index="4"]
margin_right = 60.0

[node name="SaveConfirmationDialog" parent="GameData" index="6"]
margin_right = 518.0

[node name="stats" type="Node2D" parent="GameData"]
position = Vector2( 0, 29 )

[node name="Panel" type="Panel" parent="GameData/stats"]
margin_left = 97.0
margin_top = 229.0
margin_right = 357.0
margin_bottom = 269.0
rect_pivot_offset = Vector2( 611, -10 )
custom_styles/panel = SubResource( 1 )

[node name="Text" type="Label" parent="GameData/stats"]
margin_left = 105.0
margin_top = 238.0
margin_right = 212.0
margin_bottom = 265.0
theme = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 5
custom_fonts/font = ExtResource( 10 )
text = "Game Data."
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SettingsSystem" type="Button" parent="."]
margin_left = 426.0
margin_top = 56.0
margin_right = 599.0
margin_bottom = 84.0
focus_neighbour_left = NodePath("../HighScores")
focus_neighbour_top = NodePath("../Credits")
focus_neighbour_right = NodePath("../SettingsGame")
focus_neighbour_bottom = NodePath("../SettingsGame")
focus_next = NodePath("../SettingsGame")
focus_previous = NodePath("../Credits")
theme = ExtResource( 6 )
text = "Settings System"

[node name="SettingsGame" type="Button" parent="."]
margin_left = 607.0
margin_top = 56.0
margin_right = 780.0
margin_bottom = 84.0
focus_neighbour_left = NodePath("../SettingsSystem")
focus_neighbour_top = NodePath("../SettingsSystem")
focus_neighbour_right = NodePath("../Builder")
focus_neighbour_bottom = NodePath("../Builder")
focus_next = NodePath("../Builder")
focus_previous = NodePath("../Credits")
theme = ExtResource( 6 )
text = "Settings Game"

[node name="Credits" type="Button" parent="."]
margin_left = 64.0
margin_top = 56.0
margin_right = 237.0
margin_bottom = 84.0
focus_neighbour_right = NodePath("../HighScores")
focus_neighbour_bottom = NodePath("../HighScores")
focus_next = NodePath("../HighScores")
theme = ExtResource( 6 )
text = "Credits"

[node name="HighScores" type="Button" parent="."]
margin_left = 245.0
margin_top = 56.0
margin_right = 418.0
margin_bottom = 84.0
focus_neighbour_left = NodePath("../Credits")
focus_neighbour_right = NodePath("../SettingsSystem")
focus_neighbour_bottom = NodePath("../SettingsSystem")
focus_next = NodePath("../SettingsSystem")
theme = ExtResource( 6 )
text = "High Scores"

[node name="Builder" type="Button" parent="."]
margin_left = 787.0
margin_top = 56.0
margin_right = 960.0
margin_bottom = 84.0
focus_neighbour_left = NodePath("../SettingsGame")
focus_neighbour_top = NodePath("../SettingsGame")
focus_neighbour_bottom = NodePath("../GameData/GameDataPanel/GridContainer/GridContainer/UsernameLineEdit")
focus_next = NodePath("../GameData/GameDataPanel/GridContainer/GridContainer/UsernameLineEdit")
focus_previous = NodePath("../SettingsSystem")
theme = ExtResource( 6 )
text = "Builder "

[node name="Sprite" type="Sprite" parent="."]

[node name="DifficultyLevel" parent="." instance=ExtResource( 1 )]

[node name="SceneHeader" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="SettingsSystem" to="." method="_on_settings_system_Button_pressed"]
[connection signal="pressed" from="SettingsGame" to="." method="_on_settings_game_Button_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_Button_pressed"]
[connection signal="pressed" from="HighScores" to="." method="_on_high_scores_Button_pressed"]
[connection signal="pressed" from="Builder" to="." method="_on_builder_data_Button_pressed"]

[editable path="GameDataLoaded"]
[editable path="GameDataSaved"]
[editable path="GameData"]
[editable path="SceneHeader"]
